--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
+
+
 body {
-    background-color: #ddd;
+    background-color: #f2e4db;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -16,7 +18,7 @@ body {
 /* -----------------NAV BAR-------------------------------*/
 /* Add a black background color to the top navigation */
 #topnav {
-    background-color: #0c5d9c;
+    background-color: #9c469a;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
@@ -36,13 +38,13 @@ body {
 
 /* Change the color of links on hover */
 .topnav a:hover {
-    background-color: #ddd;
+    background-color: #f2e4db;
     color: black;
 }
 
 /* Add a color to the active/current link */
 .topnav a.active {
-    background-color: #e31e24;
+    background-color: #eb9e00;
     color: white;
 }
 
@@ -85,28 +87,28 @@ body {
 }
 
 .teamA {
-    background-color: #e31e24;
+    background-color: #eb9e00;
     /* border-radius: 20px 0px 0px 0px;    */
 }
 
 .scoreA {
     font-size: 20px;
     font-weight: bolder;
-    background-color: #e31e24;
+    background-color: #eb9e00;
     text-align: center;
     vertical-align: middle;
     /* border-radius: 0px 20px 0px 0px; */
 }
 
 .teamB {
-    background-color: #0c5d9c;
+    background-color: #9c469a;
     /* border-radius: 0px 0px 0px 20px;    */
 }
 
 .scoreB {
     font-size: 20px;
     font-weight: bolder;
-    background-color: #0c5d9c;
+    background-color: #9c469a;
     text-align: center;
     vertical-align: middle;
     /* border-radius: 0px 0px 20px 0px;     */
@@ -114,7 +116,7 @@ body {
 
 .sidebarnews {
     width: 100%;
-    background-color: #0c5d9c;
+    background-color: #9c469a;
     height: auto;
     padding: 0px;
     color: white;
@@ -134,16 +136,16 @@ body {
 }
 
 .sidebarnews tr:nth-child(even) td {
-    background-color: #0c5d9c;
+    background-color: #9c469a;
 }
 
 .sidebarnews tr:nth-child(odd) td {
-    background-color: #e31e24;
+    background-color: #eb9e00;
 }
 
 /* ------------------------footer-----------------------------*/
 .footer {
-    background-color: #0c5d9c;
+    background-color: #9c469a;
     color: white;     
     margin-top: 10px;
     height: 250px;
