--- a/css/carosel.css
+++ b/css/carosel.css
@@ -1,86 +1,45 @@
-* {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif;}
-.mySlides {display: none;}
-img {vertical-align: middle;}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 300px;
-  position: relative;
-  margin: auto;
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
+.sideTrend img {
+  vertical-align: middle;
   width: 100%;
-  text-align: center;
+  /* height: 400px */
+  
 }
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
 /* The dots/bullets/indicators */
 .dot {
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
+  background-color: #2a4949;
+  /* border-radius: 50%; */
   display: inline-block;
   transition: background-color 0.6s ease;
 }
-
 .active {
-  background-color: var(--colorB);
+  background-color: #00ffff;
 }
 
 .trendBookName  {
   font-size: 20px;
   color: var(--colorB);
   padding: 10px;   
-  background-color: var(--colorA);
-  
-  text-align: center;
-}
-.trendBookName{
-  font-size: 20px;
-  color: var(--colorB);
-  padding: 10px;   
   background-color: var(--colorA);  
-  text-align: center;
-}
 
+}
 .trendDot{
   text-align:center;
   background-color: var(--colorA);
   padding: 10px;
 }
     
- 
 
-/* Fading animation */
+/* Fading animation
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
 }
 
 @keyframes fade {
-  from {opacity: .8} 
+  from {opacity: .9} 
   to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
-}
+} 
+ */
