--- a/css/style.css
+++ b/css/style.css
@@ -99,10 +99,12 @@ body {
 .sidebar {
     width: 250px;
     height: 100%;
+    text-align: center;
+ 
     /* position: absolute; chnage this tro scroll*/
-    position: -webkit-sticky;
+    /* position: -webkit-sticky;
     position: sticky;
-    top: 45px;
+    top: 45px; */
    
       
 }
