--- a/css/carosel.css
+++ b/css/carosel.css
@@ -9,13 +9,13 @@
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #2a4949;
+  background-color: var(--colorC);
   /* border-radius: 50%; */
   display: inline-block;
   transition: background-color 0.6s ease;
 }
 .active {
-  background-color: #00ffff;
+  background-color: var(--colorB);
 }
 
 .trendBookName  {
