--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@
 :root {
 
     --colorA: #004d43;
-    --colorC: #ffffff;
-    --colorB: #f8ebdb;
+    --colorC: #f6e9d9;
+    --colorB: #ffd29b;
 
 }
 
