--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@
 :root {
 
     --colorA: #004d43;
-    --colorC: #f6e9d9;
-    --colorB: #ffdfb8;
+    --colorC: #e4ded7;
+    --colorB: #eed5b7;
 
 }
 
