--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ body {
     top: 0;
     z-index: 9999;
     text-align: center;
+    font-weight: bold;
 }
 
 /* Style the links inside the navigation bar */
@@ -55,7 +56,7 @@ body {
 /* Change the color of links on hover */
 .topnav a:hover {
     background-color: var(--colorB);
-    color: black;
+    color: var(--colorA)
 }
 
 /* Add a color to the active/current link */
