--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
     --colorA: #004d43;
     --colorB: #eae0d4;
     --colorC: #eae0d4; 
-    --colorD: #d81a1c; 
+    --colorD: #e0d05a; 
 
     /* --colorB: #eed5b7; 
         --colorC: #fff; */
