--- a/css/contact.css
+++ b/css/contact.css
@@ -1,53 +1,86 @@
-.contact-page{    
-   justify-content: center;
-    align-items: center;
-    text-align: center;
+.contact-page {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-.ContactSECT{
-    /* çdisplay: flex; */
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: var(--colorA);
-    
-    padding: 10px;
+.ContactSECT {  
+  color: var(--colorA);
 }
-.ContactSECT img{
-    width: 40%;
-    height: auto;
-    margin: 10px;
+
+.ContactSECT img {
+  width: 40%;
+  height: auto;
+  margin: 10px;
 }
- /* Style inputs with type="text", select elements and textareas */
- input[type=text], select, textarea {
-    width: 100%; /* Full width */
-    padding: 12px; /* Some padding */
-      border: 1px solid #ccc; /* Gray border */
-      border-radius: 4px; /* Rounded borders */
-      box-sizing: border-box; /* Make sure that padding and width stays in place */
-      margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
-    }
-    
-    /* Style the submit button with a specific background color etc */
-    input[type=submit] {
-    background-color: #04AA6D;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    
-    /* When moving the mouse over the submit button, add a darker green color */
-    input[type=submit]:hover {
-      background-color: #45a049;
-    }
-    
-    /* Add a background color and some padding around the form */
-    .container {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-    } 
+
+/* Style inputs with type="text", select elements and textareas */
+input[type=text],
+select,
+textarea {
+  width: 100%;  /* Full width */
+  padding: 12px;  /* Some padding */
+  border: 1px solid #ccc;  /* Gray border */
+  box-sizing: border-box;  /* Make sure that padding and width stays in place */
+  margin-top: 6px;  /* Add a top margin */
+  margin-bottom: 16px;  /* Bottom margin */
+  resize: vertical    /* Allow the user to vertically resize the textarea (not horizontally) */
+
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: var(--colorA);
+  color: var(--colorB);
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: var(--colorD);
+  color: var(--colorA);
+}
+.ContactForm{
+  background-color: var(--colorA); 
+  display: flex;
+  color: var(--colorB);  
+
+}
+form {
+  text-align: left;
+  width: 50%;
+  color: var(--colorA);
+  background-color: var(--colorB); 
+  margin: 0px 5px 10px 10px;
+  padding: 10px;
+}
+
+.contactInfo{
+  padding: 10px;
+  width: 50%;
+  background-color: var(--colorB);
+  margin: 0px 10px 10px 5px; 
+  color: var(--colorA);
+  font-size: 20px;
+  font-weight: bolder;
+}
+iframe{
+  width: 100%;
+  height: 400px;
+  
+ 
+  border: 1px solid var(--colorA);
+}
+.social-media {
+  background-color: var(--colorA);
+  color: var(--colorB);
+
+}
+.social-media iconify-icon{
+  transform: scale(2.5);
+  padding-top: 10px;
+  margin: 0px 25px 20px 25px;
+
+}
