--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,8 @@ body {
     font-size: 40px;
     position: absolute;
     bottom: 20px;
-    right: 20%;
+    right: 25%;
+    margin-bottom: 15%;
     color: var(--colorA);
     padding-left: 20px;
     padding-right: 20px;
