--- a/src/css/shop.css
+++ b/src/css/shop.css
@@ -16,6 +16,11 @@
   color: var(--colorB);
   margin: 10px;
 }
+.card img {
+  width: 100%;
+  /* height: 200px;
+  object-fit: cover; */
+}
 
 .price {
   color: var(--colorD);
